--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content text-black">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Special Advertisement</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <img src="ads.jpg" alt="Advertisement Image" class="img-fluid">
+        <img src="advertisement.jpg" alt="Advertisement Image" class="img-fluid">
         <p>This is a special offer just for you!</p>
       </div>
       <div class="modal-footer">
